<resources>
    <string name="app_name">yoplp</string>


    <string name="menuAddFiles">Add Files</string>
    <string name="action_settings">Settings</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="menuClearList">Clear Playlist</string>
    <string name="menuRandomizeList">Randomize Playlist</string>
    <string name="menuSaveList">Save Playlist</string>
    <string name="menuSortList">Sort Playlist</string>
    <string name="button_selection_mode">Selecction Mode</string>
    <string name="selectionModeOn">S.Mode On </string>
    <string name="selectionModeOff">S.Mode Off</string>
    <string name="fcNewFolder">New folder</string>
    <string name="pref_autoplay">Autoplay</string>
    <string name="pref_autoplay_summary">YOPLP plays the track that was playing the last time it stops.</string>
    <string name="pref_rememberTime">Remember time</string>
    <string name="pref_rememberTime_summary">Autoplay starts on the position of the track that was last played</string>
    <string name="pref_defaultM3UFolder">Default folder for playlists</string>
    <string name="pldFileName">Playlist name</string>
    <string name="menuLoadList">Load Play List</string>
    <string name="defaultTextSongTimeLeft">00:00</string>
    <string name="defaultTextSongName">Title</string>
    <string name="defaultTextSongAlbum">Album</string>
    <string name="defaultTextSongAuthor">Author</string>
    <string name="defaultFcUrlText">Toplevel folders</string>

</resources>
