<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".PlayListActivity">
      <item android:id="@+id/menuAddFiles"
            android:title="@string/menuAddFiles"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/menuClearList"
            android:title="@string/menuClearList"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/menuSortList"
            android:title="@string/menuSortList"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/menuRandomizeList"
            android:title="@string/menuRandomizeList"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>
