<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_autoplay"
            android:id="@+id/textPrefAutoplay" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_autoplay_summary"
            android:id="@+id/prefAutoplayCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_rememberTime"
        android:id="@+id/textPrefRememberTime" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_rememberTime_summary"
        android:id="@+id/prefRememberTimeCheck" />
</LinearLayout>